# OpticalCrystal

./: CMakeLists.txt  CrystalOptical.cc  OpticksEnv  README.md  init_vis.mac  run1.mac  vis.mac
include/: DetectorConstruction.hh  OpticalProperties.hh  PersistencyManager.hh  SiPMSensDet.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  OpticalProperties.cc  PersistencyManager.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SiPMSensDet.cc  SteppingAction.cc
